start fixing tests, fix first small found generation issues